# qinit

./: .gitignore  Makefile  README.md  TODO.md  WORKSPACE
lib/: libq.h
src/: init.sh  sh.c
src/cargo/: BUILD.bazel  Cargo.toml
src/cargo/builds/: ring-0.16.BUILD
src/coreutils/: BUILD  echo.c
src/coreutils/blkid/src/: main.rs
src/coreutils/cargo/: BUILD.bazel  Cargo.toml
src/coreutils/cat/src/: main.rs
src/coreutils/echo/: BUILD
src/coreutils/echo/src/: main.rs
src/coreutils/ls/src/: main.rs
src/coreutils/mkdir/src/: main.rs
src/coreutils/mknod/src/: main.rs
src/coreutils/mount/src/: main.rs
src/freud/: BUILD
src/freud/docs/: DESIGNDOC.md  TODO.md
src/initramfs/: BUILD  build_initramfs.py  cats.txt  init.sh  initramfs.bzl
src/libq/: BUILD  io.c
src/libq/cargo/: BUILD.bazel
src/libq/src/: daemon.rs  io.rs  iter.rs  lib.rs  logger.rs  macros.rs  mem.rs  passwd.rs  qnix.rs  rand.rs  strings.rs  tabulate.rs  terminal.rs
src/libq/src/elf/: api.rs  (+2 more)
src/libq/tests/: test_elf.rs  test_io.rs  test_passwd.rs  test_strings.rs
src/qdev/: BUILD
src/qdevd/: BUILD
src/qinit/: BUILD
src/qinit/docs/: task.capnp  terms.md
src/rootfs/: BUILD  init.sh  vendor
src/rootfs/etc/: group  passwd  shadow
src/rootfs/tasks/: freudian.service  freudian.task  getty.service  getty.task  multi_user_mode.stage  qdev.task  qdevd.service  qdevd.task  shutdown.service  shutdown.stage  single_user_mode.stage
src/sh/: BUILD
src/sh/cargo/: Cargo.toml
src/sh/src/: ast.rs  builtins.rs  main.rs  process.rs  shell.rs  shio.rs  strings.rs
src/utils/: BUILD
(+73 files in other folders)
