[package]
name = "cargo"
version = "0.1.0"
authors = ["sinkingpoint <colin@quirl.co.nz>"]
edition = "2018"

[dependencies]
nix = "0.17.0"
clap = "2.33.0"
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
serde_derive = "1.0.110"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//src/cargo"
output_buildfile_suffix = "BUILD.bazel"

[raze.crates.libc.'0.2.70']
additional_flags = [
    "--cfg=libc_align"
]

[raze.crates.proc-macro2.'1.0.17']
additional_flags = [
    "--cfg=use_proc_macro"
]